k8s/go-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-api-service
  namespace: todolist
spec:
  selector:
    app: go-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30081
  type: NodePort
