k8s/react-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
  namespace: todolist
spec:
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
